<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BNRActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHello"
        />

    <ImageView
        android:id="@+id/imageViewEUR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eur" />

    <TextView
        android:id="@+id/tvEUR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEUR" />

    <EditText
        android:id="@+id/editTextEUR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <ImageView
        android:id="@+id/imageViewUSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/usd" />

    <TextView
        android:id="@+id/tvUSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvUSD" />

    <EditText
        android:id="@+id/editTextUSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/imageViewGBP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/gbp" />

    <TextView
        android:id="@+id/tvGBP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvGBP" />

    <EditText
        android:id="@+id/editTextGBP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/imageViewXAU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/xau" />

    <TextView
        android:id="@+id/tvXAU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvXAU" />

    <EditText
        android:id="@+id/editTextXAU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btnAfisare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAfisare" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSalvare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSalvare" />

</LinearLayout>

</ScrollView>
